ssh and ags improvements

--- a/ags/scss/widgets/bar.scss
+++ b/ags/scss/widgets/bar.scss
@@ -55,7 +55,7 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
   }
 
   >* {
-    padding: $padding * 0.4 $padding * 0.7;
+    padding: $padding * 0.4 $padding * 0.8;
   }
 }
 
@@ -181,8 +181,10 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
   }
 
   .battery-bar {
-    .font-icon {
-      font-size: 1.3em;
+    .font-icon { font-size: 1.15em; }
+
+    @if $battery-bar-full {
+        > box { padding: 0; }
     }
 
     image,
@@ -228,6 +230,21 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
     &:active {
       @include color($accent-fg)
     }
+
+    .whole-button {
+      label {
+          color: $fg-color;
+          text-shadow: $text-shadow;
+      }
+
+      trough, block.filled {
+          border-radius: $button-radius;
+      }
+
+      @if $bar-style == 'separated' {
+          trough { border: none; }
+      }
+    }
   }
 
   .workspaces button {
@@ -242,14 +259,6 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
       margin: 0 $padding/2;
       transition: $transition/2;
       background-color: transparentize($fg-color, 0.8);
-    }
-
-    &:last-child .indicator {
-      margin-right: $padding;
-    }
-
-    &:first-child .indicator {
-      margin-left: $padding;
     }
 
     &.occupied .indicator {
