--- a/ags/scss/widgets/bar.scss
+++ b/ags/scss/widgets/bar.scss
@@ -1,35 +1,35 @@
 $bar-spacing: $spacing / 2;
-$button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radii);
+$button-radius: if(
+  $bar-style == "floating",
+  max(0, $radii - $bar-spacing),
+  $radii
+);
 
 @mixin panel-button($flat: $bar-flat-buttons, $reactive: true) {
   @include unset;
 
-  @if $bar-style =='separated' {
+  @if $bar-style == "separated" {
     transition: $transition;
 
-    >* {
+    > * {
       @include floating-widget;
       border-radius: $radii;
       margin: $wm-gaps $bar-spacing;
       transition: $transition;
     }
 
-    &:hover>* {
+    &:hover > * {
       color: $hover-fg;
 
       @if $drop-shadow {
-        box-shadow: 0 0 min(6px, $spacing/2) 0 $shadow,
-          inset 0 0 0 99px $hover;
-      }
-
-      @else {
+        box-shadow: 0 0 min(6px, $spacing/2) 0 $shadow, inset 0 0 0 99px $hover;
+      } @else {
         box-shadow: inset 0 0 0 99px $hover;
       }
     }
 
-    &:active>*,
-    &.active>* {
-
+    &:active > *,
+    &.active > * {
       label,
       image {
         color: $accent-fg;
@@ -38,12 +38,10 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
       background-image: $active-gradient;
       background-color: $accent;
     }
-  }
-
-  @else {
+  } @else {
     @include accs-button($flat, $reactive);
 
-    >* {
+    > * {
       border-radius: $button-radius;
       margin: $bar-spacing;
     }
@@ -54,39 +52,37 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
     font-weight: bold;
   }
 
-  >* {
+  > * {
     padding: $padding * 0.4 $padding * 0.8;
   }
 }
 
 .panel {
-  @if $bar-style =='normal' {
+  @if $bar-style == "normal" {
     background-color: $bg-color;
   }
 
-  @if not $screen-corners and $bar-style =='normal' {
-    @if $bar-position =='bottom' {
+  @if not $screen-corners and $bar-style == "normal" {
+    @if $bar-position == "bottom" {
       border-top: $border;
-    }
-
-    @else {
+    } @else {
       border-bottom: $border;
     }
   }
 
-  @if $bar-style =='floating' {
+  @if $bar-style == "floating" {
     @include floating-widget;
     border-radius: $radii;
     margin: $wm-gaps;
     padding: 0;
   }
 
-  @if $bar-style =='separated' {
-    >.end>button:last-child>* {
+  @if $bar-style == "separated" {
+    > .end > button:last-child > * {
       margin-right: $wm-gaps;
     }
 
-    >.start>button:first-child>* {
+    > .start > button:first-child > * {
       margin-left: $wm-gaps;
     }
   }
@@ -137,8 +133,8 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
     }
   }
 
-  .focused-client>box>box,
-  .quicksettings>box {
+  .focused-client > box > box,
+  .quicksettings > box {
     @include spacing(1, if($bar-spacing ==0, $padding / 2, $bar-spacing));
   }
 
@@ -180,16 +176,26 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
     }
   }
 
+  .weather-container {
+    .weather-icon {
+      font-size: 1.15rem;
+    }
+  }
+
   .battery-bar {
-    .font-icon { font-size: 1.15em; }
+    .font-icon {
+      font-size: 1.15em;
+    }
 
     @if $battery-bar-full {
-        > box { padding: 0; }
+      > box {
+        padding: 0;
+      }
     }
 
     image,
     .font-icon {
-      margin-right: $bar-spacing * .5;
+      margin-right: $bar-spacing * 0.5;
     }
 
     levelbar trough {
@@ -204,45 +210,51 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
     }
 
     @mixin color($color) {
-
       image,
       label {
-        color: $color
+        color: $color;
       }
 
       block.filled {
-        background-image: linear-gradient(to right, $color, lighten($color, 6%));
+        background-image: linear-gradient(
+          to right,
+          $color,
+          lighten($color, 6%)
+        );
       }
     }
 
     .medium {
-      @include color($yellow)
+      @include color($yellow);
     }
 
     .low {
-      @include color($red)
+      @include color($red);
     }
 
     .charging {
-      @include color($green)
+      @include color($green);
     }
 
     &:active {
-      @include color($accent-fg)
+      @include color($accent-fg);
     }
 
     .whole-button {
       label {
-          color: $fg-color;
-          text-shadow: $text-shadow;
+        color: $fg-color;
+        text-shadow: $text-shadow;
       }
 
-      trough, block.filled {
-          border-radius: $button-radius;
+      trough,
+      block.filled {
+        border-radius: $button-radius;
       }
 
-      @if $bar-style == 'separated' {
-          trough { border: none; }
+      @if $bar-style == "separated" {
+        trough {
+          border: none;
+        }
       }
     }
   }
@@ -254,7 +266,7 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
       font-size: 0;
       min-width: 8px;
       min-height: 8px;
-      border-radius: $radii*0.6;
+      border-radius: $radii * 0.6;
       box-shadow: inset 0 0 0 $border-width $border-color;
       margin: 0 $padding/2;
       transition: $transition/2;
