--- a/ags/scss/widgets/bar.scss
+++ b/ags/scss/widgets/bar.scss
@@ -157,6 +157,11 @@ $button-radius: if(
   }
 
   .media {
+    label {
+      color: $accent;
+      margin-left: $padding;
+    }
+
     &.spotify image {
       color: $green;
     }
@@ -180,6 +185,10 @@ $button-radius: if(
     .weather-icon {
       font-size: 1.15rem;
     }
+  }
+
+  .weather-additional-info {
+    margin-right: $bar-spacing;
   }
 
   .battery-bar {
