--- a/ags/scss/widgets/media.scss
+++ b/ags/scss/widgets/media.scss
@@ -5,7 +5,6 @@
     }
 
     .loop {
-
       &.playlist,
       &.track {
         color: $color;
@@ -38,7 +37,7 @@
   .cover {
     background-size: cover;
     background-position: center;
-    border-radius: $radii*0.8;
+    border-radius: $radii * 0.8;
     opacity: 0.9;
   }
 
@@ -47,7 +46,6 @@
     min-width: 100px;
     box-shadow: 2px 2px 2px 0 $shadow;
     margin: $padding;
-
   }
 
   .labels {
@@ -64,7 +62,12 @@
   }
 
   .position-slider {
-    @include slider($width: .4em, $slider: false, $gradient: linear-gradient($shader-fg, $shader-fg), $radii: 0);
+    @include slider(
+      $width: 0.4em,
+      $slider: false,
+      $gradient: linear-gradient($shader-fg, $shader-fg),
+      $radii: 0
+    );
     margin-bottom: $padding/2;
 
     trough {
@@ -94,7 +97,6 @@
       &.shuffle,
       &.loop {
         font-size: 1.4em;
-
       }
     }
 
