--- a/ags/scss/widgets/bar.scss
+++ b/ags/scss/widgets/bar.scss
@@ -134,8 +134,10 @@ $button-radius: if(
   }
 
   .focused-client > box > box,
-  .quicksettings > box {
-    @include spacing(1, if($bar-spacing ==0, $padding / 2, $bar-spacing));
+  .quicksettings > box > box {
+    @include spacing(
+      $spacing: if($bar-spacing == 0, $padding / 2, $bar-spacing)
+    );
   }
 
   /* stylelint-disable-next-line selector-not-notation */
@@ -175,20 +177,11 @@ $button-radius: if(
     }
   }
 
-  .notifications {
-    image {
-      color: $yellow;
+  .weather {
+    label {
+      color: $accent;
+      margin-right: $padding;
     }
-  }
-
-  .weather-container {
-    .weather-icon {
-      font-size: 1.15rem;
-    }
-  }
-
-  .weather-additional-info {
-    margin-right: $bar-spacing;
   }
 
   .battery-bar {
