--- a/ags/scss/widgets/desktop.scss
+++ b/ags/scss/widgets/desktop.scss
@@ -1,10 +1,12 @@
 window.corner .corner {
   background-color: $bg-color;
   border-radius: $radii * 2;
+  min-width: 2px;
+  min-height: 2px;
 }
 
 window.desktop {
-  @if $bar-style =='normal' {
+  @if $bar-style == "normal" {
     border-radius: if($screen-corners, $radii * 2, 0);
     box-shadow: inset 0 0 $wm-gaps / 2 0 $shadow;
   }
@@ -42,7 +44,6 @@ window.desktop {
   }
 
   @if $drop-shadow {
-
     .clock-box-shadow,
     separator {
       box-shadow: 2px 2px 2px 0 $shadow;
@@ -55,9 +56,7 @@ window.desktop {
     label {
       text-shadow: $text-shadow;
     }
-  }
-
-  @else {
+  } @else {
     .clock-box-shadow {
       box-shadow: 0 0 0 $border-width $border-color,
         inset 0 0 0 $border-width $border-color;
